# BIT-MITRA

./: README.md  package-lock.json  package.json
backend/: index.js  package-lock.json  package.json
backend-fastapi/: .env.example  .gitignore  README.md  pyproject.toml
backend-fastapi/app/: __init__.py  config.py  database.py  main.py
backend-fastapi/app/api/: deps.py
backend-fastapi/app/api/v1/: message.py  post.py  router.py  user.py
backend-fastapi/app/core/: cloudinary.py  security.py
backend-fastapi/app/models/: __init__.py  comment.py  conversation.py  message.py  post.py  user.py
backend-fastapi/app/repositories/: comment.py  post.py  user.py
backend-fastapi/app/schemas/: comment.py  message.py  post.py  user.py
backend-fastapi/app/services/: comment.py  post.py  user.py
backend-fastapi/app/websocket/: manager.py
backend/controllers/: message.controller.js  post.controller.js  user.controller.js
backend/middlewares/: isAuthenticated.js
backend/models/: comment.model.js  conversation.model.js  message.model.js  post.model.js  user.model.js
backend/routes/: message.route.js  user.route.js
backend/socket/: socket.js
backend/utils/: cloudinary.js  dataUri.js  db.js
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ChatPage.jsx  Comment.jsx  CommentDialog.jsx  CreatePost.jsx  EditProfile.jsx  Feed.jsx  Home.jsx  LeftSidebar.jsx  Login.jsx  MainLayout.jsx  Messages.jsx  MobileNav.jsx  Post.jsx  Posts.jsx  Profile.jsx  ProtectedRoutes.jsx  SignUp.jsx  (+2 more)
(+9 files in other folders)
